[gd_scene load_steps=23 format=3 uid="uid://b04fv7l4pv0k2"]

[ext_resource type="Script" path="res://Scripts/DimensionSprite.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/Objects/Pipette.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ndoyd04ilqyo" path="res://Images/Resized_Images/Pipette_with_notip.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b35y8esb054uy" path="res://Images/Resized_Images/Pipette_with_tip.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bhsxeri71of6q" path="res://Images/Pipette_Closeup_Background.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c0hsieca26dks" path="res://Images/Pipette_Closeup_Plunger.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bqshfyico1hj1" path="res://Images/Pipette_Closeup_Plunger_Stick.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dxphcfv4ogjfb" path="res://Images/RedArrow.png" id="8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(15, 83)

[sub_resource type="RectangleShape2D" id="14"]
size = Vector2(7, 69)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(9, 6)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(14, 7)

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(1, 0.215686, 0.215686, 1)
border_width_left = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.72549, 0.156863, 0.156863, 1)
border_width_left = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(1, 0.384314, 0.384314, 1)
border_width_left = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="9"]
content_margin_left = 110.0
content_margin_right = 110.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="8"]
texture = ExtResource("7")
region_rect = Rect2(0, 0, 218, 98)

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="ImageTexture" id="12"]

[sub_resource type="StyleBoxEmpty" id="13"]

[sub_resource type="Animation" id="15"]
resource_name = "MoveArrows"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(20, 12.5), Vector2(10, 12.5), Vector2(20, 12.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arrow2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(106, 12.5), Vector2(116, 12.5), Vector2(106, 12.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7n30k"]
_data = {
"MoveArrows": SubResource("15")
}

[node name="Pipette" type="RigidBody2D" groups=["LabObjects"]]
z_index = 2
collision_layer = 2
input_pickable = true
gravity_scale = 0.0
can_sleep = false
script = ExtResource("2")
draggable = true

[node name="BaseSprite" type="Sprite2D" parent="."]
position = Vector2(0, 9)
texture = ExtResource("3")
script = ExtResource("1")
sprite_dimensions = Vector2(24, 120)

[node name="TipSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 19)
texture = ExtResource("4")
script = ExtResource("1")

[node name="Collision1" type="CollisionShape2D" parent="."]
position = Vector2(4.5, -11.5)
shape = SubResource("1")

[node name="Collision2" type="CollisionShape2D" parent="."]
position = Vector2(3, 64.5)
shape = SubResource("14")

[node name="Collision3" type="CollisionShape2D" parent="."]
position = Vector2(-7.5, -50)
shape = SubResource("3")

[node name="Collision4" type="CollisionShape2D" parent="."]
position = Vector2(3, -56.5)
shape = SubResource("4")

[node name="Menu" type="CanvasLayer" parent="."]
visible = false

[node name="AutoCloseTimer" type="Timer" parent="Menu"]
one_shot = true

[node name="Border" type="ReferenceRect" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -250.0
offset_right = 155.0
offset_bottom = 250.0
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
border_width = 2.0
editor_only = false

[node name="Background" type="ColorRect" parent="Menu/Border"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="CloseButton" type="Button" parent="Menu/Border/Background"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 20.0
theme_override_colors/font_disabled_color = Color(0.65098, 0.65098, 0.65098, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("7")
theme_override_styles/disabled = SubResource("6")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("6")
theme_override_styles/normal = SubResource("7")
text = "X"

[node name="PlungerSlider" type="VSlider" parent="Menu/Border"]
layout_mode = 0
offset_left = 179.0
offset_top = 6.0
offset_right = 399.0
offset_bottom = 194.0
scale = Vector2(0.5, 0.5)
theme_override_icons/grabber = ExtResource("6")
theme_override_icons/grabber_highlight = ExtResource("6")
theme_override_icons/grabber_disabled = ExtResource("6")
theme_override_styles/slider = SubResource("9")
theme_override_styles/grabber_area = SubResource("8")
theme_override_styles/grabber_area_highlight = SubResource("8")
max_value = 2.0
value = 2.0
scrollable = false
tick_count = 1
ticks_on_borders = true

[node name="ReferenceRect" type="ReferenceRect" parent="Menu/Border/PlungerSlider"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
editor_only = false

[node name="PipetteBackground" type="TextureRect" parent="Menu/Border"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -400.0
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 5

[node name="EjectTipButton" type="Button" parent="Menu/Border"]
layout_mode = 0
offset_left = 272.0
offset_top = 102.0
offset_right = 306.0
offset_bottom = 163.0
theme_override_styles/focus = SubResource("10")
theme_override_styles/disabled = SubResource("10")
theme_override_styles/hover = SubResource("10")
theme_override_styles/pressed = SubResource("10")
theme_override_styles/normal = SubResource("10")

[node name="ReferenceRect" type="ReferenceRect" parent="Menu/Border/EjectTipButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
editor_only = false

[node name="VolumeSlider" type="HSlider" parent="Menu/Border"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
anchor_left = 0.755
anchor_top = 0.393
anchor_right = 0.755
anchor_bottom = 0.393
offset_left = -25.05
offset_top = -24.5
offset_right = 24.95
offset_bottom = 24.5
grow_horizontal = 2
theme_override_icons/grabber = SubResource("12")
theme_override_icons/grabber_highlight = SubResource("12")
theme_override_icons/grabber_disabled = SubResource("12")
theme_override_styles/slider = SubResource("13")
max_value = 20.0
step = 0.1

[node name="ReferenceRect" type="ReferenceRect" parent="Menu/Border/VolumeSlider"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
editor_only = false

[node name="Arrow1" type="TextureRect" parent="Menu/Border/VolumeSlider/ReferenceRect"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -12.0
offset_right = 43.9999
offset_bottom = 12.0
texture = ExtResource("8")
expand_mode = 1
flip_h = true

[node name="Arrow2" type="TextureRect" parent="Menu/Border/VolumeSlider/ReferenceRect"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -12.0
offset_right = -20.0002
offset_bottom = 12.0
texture = ExtResource("8")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/Border/VolumeSlider/ReferenceRect"]
libraries = {
"": SubResource("AnimationLibrary_7n30k")
}
autoplay = "MoveArrows"

[node name="VolumeDialLabels" type="Control" parent="Menu/Border"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Top" type="Label" parent="Menu/Border/VolumeDialLabels"]
layout_mode = 0
offset_left = 24.0
offset_top = 300.0
offset_right = 60.0
offset_bottom = 327.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Middle" type="Label" parent="Menu/Border/VolumeDialLabels"]
layout_mode = 0
offset_left = 24.0
offset_top = 328.0
offset_right = 60.0
offset_bottom = 358.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bottom" type="Label" parent="Menu/Border/VolumeDialLabels"]
layout_mode = 0
offset_left = 24.0
offset_top = 359.0
offset_right = 60.0
offset_bottom = 387.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionLabel" type="Label" parent="Menu/Border"]
layout_mode = 0
offset_left = 36.0
offset_top = 46.0
offset_right = 131.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Dispensed contents!"

[connection signal="timeout" from="Menu/AutoCloseTimer" to="." method="_on_AutoCloseTimer_timeout"]
[connection signal="pressed" from="Menu/Border/Background/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="drag_ended" from="Menu/Border/PlungerSlider" to="." method="_on_PlungerSlider_drag_ended"]
[connection signal="value_changed" from="Menu/Border/PlungerSlider" to="." method="_on_PlungerSlider_value_changed"]
[connection signal="pressed" from="Menu/Border/EjectTipButton" to="." method="_on_EjectTipButton_pressed"]
[connection signal="drag_ended" from="Menu/Border/VolumeSlider" to="." method="_on_VolumeSlider_drag_ended"]
[connection signal="value_changed" from="Menu/Border/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
